--- a/index.html
+++ b/index.html
@@ -30,17 +30,20 @@ H1 {
 function func(){
 var n;
 n=document.getElementById("a_znach").value;
-n=n+1;
-document.getElementById("a").innerHTML ="<h1>"+"Имя мне легион, ибо нас много "+"<br>"+ n+"</h1>";
+g=document.getElementById("b_znach").value;
+h=n+g;
+document.getElementById("a").innerHTML ="<h1>"+"Имя мне легион, ибо нас много "+"<br>"+ h+"</h1>";
 n=Number(document.getElementById("a_znach").value);
-n=n+1;
-document.getElementById("a").innerHTML = document.getElementById("a").innerHTML + "<h1>"+"Имя мне легион, ибо нас много "+"<br>"+ n+"</h1>";
+g=Number(document.getElementById("b_znach").value);
+h=n+g;
+document.getElementById("a").innerHTML = document.getElementById("a").innerHTML + "<h1>"+"Имя мне легион, ибо нас много "+"<br>"+ h +"</h1>";
 }
 </script>
   </head>
   <body>
     <h1>Hello Plunker!</h1>
-    n=<input type="text" value="0" id="a_znach">
+    n=<input type="text" value="3" id="a_znach">
+    g=<input type="text" value="2" id="b_znach">
 <br>
 <br>
 <button onclick="func()">Надо нажать</button>
