--- a/index.html
+++ b/index.html
@@ -32,16 +32,16 @@ var n;
 n=document.getElementById("a_znach").value;
 g=document.getElementById("b_znach").value;
 h=n+g;
-document.getElementById("a").innerHTML ="<h1>"+"Имя мне легион, ибо нас много "+"<br>"+ h+"</h1>";
+document.getElementById("a").innerHTML ="<h1>"+"Числа "+"<br>"+ h+"</h1>";
 n=Number(document.getElementById("a_znach").value);
 g=Number(document.getElementById("b_znach").value);
 h=n+g;
-document.getElementById("a").innerHTML = document.getElementById("a").innerHTML + "<h1>"+"Имя мне легион, ибо нас много "+"<br>"+ h +"</h1>";
+document.getElementById("a").innerHTML = document.getElementById("a").innerHTML + "<h1>"+"Числа2 "+"<br>"+ h +"</h1>";
 }
 </script>
   </head>
   <body>
-    <h1>Hello Plunker!</h1>
+    <h1>Привет!</h1>
     n=<input type="text" value="3" id="a_znach">
     g=<input type="text" value="2" id="b_znach">
 <br>
