--- a/227.html
+++ b/227.html
@@ -26,42 +26,46 @@ H1 {
     }
   {
    </style>
-  <script>
-function func(){
-var n;
-n=Number(document.getElementById("a_znach").value);
-n=n*4;
-document.getElementById("a").innerHTML ="<h1>"+"Периметр = "+ n+"</h1>";
-}
-</script>
-  </head>
-  <body>
-    <h1>Задача №1.25!</h1>
-    n=<input type="text" value="8" id="a_znach">
-<br>
-<br>
-<button onclick="func()">Ответ</button>
-<br>
-<br>
-
-
-<script>
-function func(){
+ <script> 
+ function func1(){ 
+ var a;
+ a=Number(document.getElementById("a_znach").value);
+ document.getElementById("kont_a").innerHTML ="<h1>"+"Периметр"+"<br>"+ a*4+"</h1>";
+ }
+ function func2(){
+var r;
+ r=Number(document.getElementById("b_znach").value);
+ document.getElementById("b").innerHTML ="<h1>"+"Диаметр"+"<br>"+ 2*3.14*r +"</h1>";
+ }
+  function func3(){
 var h;
-h=Number(document.getElementById("a_znach").value);
-n=h*4;
-document.getElementById("a").innerHTML ="<h1>"+"Периметр = "+ n+"</h1>";
-}
-</script>
-  </head>
-  <body>
-    <h1>Задача №1.26!</h1>
-    h=<input type="text" value="8" id="b_znach">
-<br>
-<br>
-<button onclick="func()">Ответ</button>
-<br>
-<br>
-<div id="a"></div>
-  </body>
-</html>
+ h=Number(document.getElementById("hhhhhhh").value);
+ var distance =Math.sqrt((6350+h)*(6350+h)-6350*6350);
+ document.getElementById("lalalalal").innerHTML ="<h1>"+"Расстояние до линии горизонта"+"<br>"+ distance +"</h1>";
+ }
+  function func4(){
+ var x;
+ x=Number(document.getElementById("N").value);
+ document.getElementById("l").innerHTML ="<h1>"+"Площадь бока"+"<br>"+ x*x +"</h1>";
+ document.getElementById("l").innerHTML ="<h1>"+"П"+"<br>"+ x*x +"</h1>";
+ }
+ </script>
+ </head>
+ <body>
+  <h1>Задача 1.25</h1>
+  Сторона квадрата a=<input type="text" value="4" id="a_znach">
+  <button onclick="func1()">1.25</button>
+  <div id="kont_a"></div>
+  <h1>Задача 1.26</h1>
+  Радиус r=<input type="text" value="1" id="b_znach">
+  <button onclick="func2()">1.26</button>
+  <div id="b"></div> 
+<h1>Задача 1.27</h1>
+  Высота h=<input type="text" value="1" id="hhhhhhh">
+  <button onclick="func3()">1.27</button>
+  <div id="lalalalal"></div> 
+  <h1>Задача 1.28</h1>
+  Длина ребра x=<input type="text" value="3" id="N">
+  <button onclick="func4()">1.28</button>
+  <div id="l"></div> 
+ </html>
