--- a/graph.html
+++ b/graph.html
@@ -1,1 +1,18 @@
 
+<!DOCTYPE html>
+<html>
+
+<head>
+  <link rel="stylesheet" href="style.css">
+  <script src="script.js"></script>
+</head>
+
+<body>
+  <h1>Hello Plunker!</h1>
+  <br>
+  Граф – совокупность точек, соединенных линиями. Точки называются вершинами, или узлами, а линии – ребрами, или дугами.
+  <br>
+  <img src="https://hed77.github.io/img1.PNG" width="495" height="271" alt="lorem">
+</body>
+
+</html>
