--- a/graph.html
+++ b/graph.html
@@ -13,6 +13,12 @@
   Граф – совокупность точек, соединенных линиями. Точки называются вершинами, или узлами, а линии – ребрами, или дугами.
   <br>
   <img src="https://hed77.github.io/img1.PNG" width="495" height="271" alt="lorem">
+  <br>
+  Графы, в которых все рёбра являются звеньями (порядок двух концов ребра графа не существенен), называются неориентированными.
+  <img src="https://hed77.github.io/img3.PNG.jpg" width="495" height="271" alt="lorem">
+  <br>
+  Графы, в которых все рёбра являются дугами (порядок двух концов ребра графа существенен), называются ориентированными графами или орграфами. <br>
+  <img src="https://hed77.github.io/img2.PNG" width="495" height="271" alt="lorem">
 </body>
 
 </html>
