--- a/graph.html
+++ b/graph.html
@@ -19,6 +19,13 @@
   <br>
   Графы, в которых все рёбра являются дугами (порядок двух концов ребра графа существенен), называются ориентированными графами или орграфами. <br>
   <img src="https://hed77.github.io/img2.PNG" width="495" height="271" alt="lorem">
+    Граф называется связным, если для любых двух вершин существует путь, их соединяющий.
+  <img src="https://hed77.github.io/img4.PNG.jpg" width="305" height="271" alt="lorem">
+  <br>
+  В противном случае граф называется несвязным.
+  <img src="https://hed77.github.io/img5.PNG.jpg" width="495" height="271" alt="lorem">
+   Степенью вершины называется число ребер графа, которым принадлежит эта вершина.
+  <img src="https://hed77.github.io/img6.jpg" width="305" height="271" alt="lorem">
 </body>
 
 </html>
