--- a/graph.html
+++ b/graph.html
@@ -8,24 +8,61 @@
 </head>
 
 <body>
-  <h1>Hello Plunker!</h1>
+  <h1>Графы</h1>
   <br>
   Граф – совокупность точек, соединенных линиями. Точки называются вершинами, или узлами, а линии – ребрами, или дугами.
   <br>
   <img src="https://hed77.github.io/img1.PNG" width="495" height="271" alt="lorem">
   <br>
   Графы, в которых все рёбра являются звеньями (порядок двух концов ребра графа не существенен), называются неориентированными.
+  <br>
   <img src="https://hed77.github.io/img3.PNG.jpg" width="495" height="271" alt="lorem">
   <br>
-  Графы, в которых все рёбра являются дугами (порядок двух концов ребра графа существенен), называются ориентированными графами или орграфами. <br>
+  Графы, в которых все рёбра являются дугами (порядок двух концов ребра графа существенен), называются ориентированными графами или орграфами. 
+  <br>
   <img src="https://hed77.github.io/img2.PNG" width="495" height="271" alt="lorem">
-    Граф называется связным, если для любых двух вершин существует путь, их соединяющий.
-  <img src="https://hed77.github.io/img4.PNG.jpg" width="305" height="271" alt="lorem">
+  <br>
+  Граф называется связным, если для любых двух вершин существует путь, их соединяющий.
+  <br>
+  <img src="https://hed77.github.io/img5.PNG.jpg" width="505" height="271" alt="lorem">
   <br>
   В противном случае граф называется несвязным.
-  <img src="https://hed77.github.io/img5.PNG.jpg" width="495" height="271" alt="lorem">
-   Степенью вершины называется число ребер графа, которым принадлежит эта вершина.
+  <br>
+  <img src="https://hed77.github.io/img4.PNG.jpg" width="395" height="271" alt="lorem">
+  <br>
+  Степенью вершины называется число ребер графа, которым принадлежит эта вершина.
+  <br>
   <img src="https://hed77.github.io/img6.jpg" width="305" height="271" alt="lorem">
+  <br>
+  Деревом называется связный граф, не содержащий циклов. Между любыми двумяего вершинами существует единственный путь.
+  <br>
+  <img src="https://hed77.github.io/img7.PNG" idth="395" height="271" alt="lorem">
+  <br>
+  Графы изоморфны если они имееют одинаковое число одинакого соедененных вершин.
+  <br>
+  <img src="https://hed77.github.io/img8.PNG" idth="395" height="271" alt="lorem">
+  <br>
+  Эйлеровой цепью в неориентированном графе называется простая цепь, содержащая все ребра графа
+  <br>
+  <img src="https://hed77.github.io/img.PNG" idth="395" height="271" alt="lorem">
+  <br>
+  Эйлеровым циклом называется замкнутая Эйлерова цепь
+  <br>
+  <img src="https://hed77.github.io/img9.PNG" idth="395" height="271" alt="lorem">
+  <br>
+  Цепь называется гамильтоновой, если она проходит по одному разу через каждую вершину графа
+  <br>
+  <img src="https://hed77.github.io/img10.PNG" idth="395" height="271" alt="lorem">
+  <br>
+  Цикл называется гамильтоновым, если он проходит по одному разу через каждую вершину графа и возвращается в начальную точку
+  <br>
+  <img src="https://hed77.github.io/img11.PNG" idth="395" height="271" alt="lorem">  
+  <br>
+  Кратчайший путь алгоритмом Дейкстры находит кратчайшее расстояние от одной из вершин графа до другой.
+  <br>
+  <img src="https://hed77.github.io/img12.PNG" idth="395" height="271" alt="lorem">    
+  
+
 </body>
 
 </html>
