--- a/logfynk.html
+++ b/logfynk.html
@@ -8,9 +8,9 @@
 <body>
   <h1>Задание 2</h1>
   <br>
-  <img src="https://hed77.github.io/111.PNG" width="495" height="271" alt="lorem">
+  <img src="https://hed77.github.io/111.png" width="495" height="271" alt="lorem">
   <br>
-  <img src="https://hed77.github.io/222.PNG" width="495" height="271" alt="lorem">
+  <img src="https://hed77.github.io/222.png" width="495" height="271" alt="lorem">
   <br>
 </body>
 
