--- a/logfynk.html
+++ b/logfynk.html
@@ -12,6 +12,8 @@
   <br>
   <img src="https://hed77.github.io/222.png" width="495" height="271" alt="lorem">
   <br>
+  <img src="https://hed77.github.io/333.png" width="495" height="271" alt="lorem">
+  <br>
 </body>
 
 </html>
